--- a/app/src/main/res/values/config.xml
+++ b/app/src/main/res/values/config.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="base_url">http://www.kuaidi100.com/query</string>
+<string name="base_url">http://www.kuaidi100.com/</string>
 </resources>
